# x-cmake

./: CMakeLists.txt  README.md
CMakeModules/: FindBoost.cmake  common.cmake
include/: base_0.hpp
include/base_0/: base_0.hpp  base_0_global.h
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/base_0/: CMakeLists.txt  base_0.cxx
src/base/base_1/: CMakeLists.txt  base_1.cxx
